aksdemomanifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-aksapiback-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: aksapiback
            port: 
              number: 80
      - path: /api/product
        pathType: Prefix
        backend:
          service:
            name: aksapiback1
            port: 
              number: 80
              
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksapiback1
  labels:
    app: aksapiback1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aksapiback1
  template:
    metadata:
      labels:
        app: aksapiback1
    spec:
      containers:
      - name: mycontainer
        image:  mycontainerregistry0707.azurecr.io/productapiimage:v1
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: aksapiback1
  labels:
    run: aksapiback1
spec:
  ports:
  - port: 80    
    protocol: TCP
  selector:
    app: aksapiback1
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksapiback
  labels:
    app: aksapiback
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aksapiback
  template:
    metadata:
      labels:
        app: aksapiback
    spec:
      containers:
      - name: mycontainer
        image:  mycontainerregistry0707.azurecr.io/orderapiimage:v1
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: aksapiback
  labels:
    run: aksapiback
spec:
  ports:
  - port: 80    
    protocol: TCP
  selector:
    app: aksapiback
  type: ClusterIP
